--- a/module1/lesson18/task1/src/index.css
+++ b/module1/lesson18/task1/src/index.css
@@ -1,3 +1,9 @@
-.test {
-  width: 0;
+h1 {
+
+  color: white;
+  background: darkgrey;
+  width: fit-content;
+  padding: 10px;
+  border-radius: 28px;
+  box-sizing: border-box;
 }
