--- a/module1/lesson19/lessonTask/src/index.css
+++ b/module1/lesson19/lessonTask/src/index.css
@@ -1,13 +1,22 @@
 :root {
   --text-color: white;
+  --main-background: black;
+}
+
+h2{
+  margin: 0;
 }
 
 body {
-  background-color: black;
+  background-color: var(--main-background);
   color: var(--text-color);
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  text-align: center;
   margin: 0;
   padding: 0;
+
+  min-height: 100vh;
+  height: 100vh;
 }
