--- a/module1/lesson19/tasks/task1/index.css
+++ b/module1/lesson19/tasks/task1/index.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 1.5s ease-in;
 }
 
 .button {
